# getsetmix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT.md  Dockerfile  Justfile  PRODUCT.md  README.md  commitlint.config.js  commitlint.config.mjs  go.mod  go.sum  lsp.json  pyproject.toml  requirements.txt  run_local.py
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  commitlint.yml  docker-publish.yml  release.yml
adapter-runtime/: Dockerfile  requirements-dev.txt  requirements.txt
adapter-runtime/tests/: test_runtime.py
app/: __init__.py  config.py  db.py  main.py  metadata.py  metrics.py  naming.py  rekordbox.py  tagger.py  worker.py
app/static/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
cmd/getsetmix/: main.go
data/: config.json  getsetmix.db
deploy/: DEPLOY-HANDOFF.md  docker-compose.yml
deploy/k8s/: getsetmix.yaml
deploy/kubernetes/: 00-configmap.yaml  01-state-pvc.yaml  02-deployment.yaml  03-service.yaml  04-auth-secret.example.yaml  05-nats.yaml
docs/: service-design.md
docs/adr/: 0001-nats-adapter-bus.md
internal/adapterbus/: nats_client.go  nats_client_test.go  types.go
internal/history/: store.go
internal/ingestionbatch/: module.go  module_test.go
internal/orchestrator/: orchestrator.go  orchestrator_test.go
internal/service/: config.go  filename.go  filename_test.go  server.go  server_test.go  ui_assets.go
scripts/: fix_icon.py
site/: docs.html  index.html  style.css
tests/: test_api.py  test_naming.py  test_rekordbox.py
(+15 files in other folders)
